--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-DB_USER=Maylon77  
-DB_PASS=Ne1MTEXTYEup5NrO
+MONGODB_CONNECT_URI=mongodb+srv://Maylon77:Ne1MTEXTYEup5NrO@cluster0.rh84gdu.mongodb.net/DigitaFarma?retryWrites=true&w=majority
